--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <resources>
-    <string name="app_name">Mars Real Estate</string>
+    <string name="app_name">MyProduct App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="discount_format">%s%%</string>
+    <string name="myproduct_app">MyProduct App</string>
+    <string name="availability_in_stock">In Stock</string>
+    <string name="availability_out_of_stock">Out of Stock</string>
+    <string name="off">OFF</string>
+    <string name="reviews">Reviews</string>
+    <string name="return_policy">Return Policy:</string>
+    <string name="explore_myproduct_app">Explore MyProduct App</string>
+    <string name="click_on_view_products_button">Click On View Products Button</string>
+    <string name="view_products">View Products</string>
+    <string name="off_">OFF</string>
+
 </resources>
